app/main/default/objects/sf_tfs__TFS_Admin_Settings__c/sf_tfs__TFS_Admin_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>sf_tfs__Named_Credentials__c</fullName>
        <label>Named Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_tfs__Named_Credentials_for_Usersearch__c</fullName>
        <label>Named Credentials for Usersearch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_tfs__TFSBrowseUrl__c</fullName>
        <label>TFSBrowseUrl</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_tfs__TFS_Search_Named_Credentials__c</fullName>
        <label>TFS Search Named Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_tfs__is_many_to_many_relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is many to many relationship</label>
        <type>Checkbox</type>
    </fields>
    <label>TFS Admin Settings</label>
</CustomObject>