app/main/default/objects/sf_tfs__TFS_Admin_Settings__c/fields/sf_tfs__is_many_to_many_relationship__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__is_many_to_many_relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is many to many relationship</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>