app/main/default/objects/sf_tfs__TFS_Admin_Settings__c/fields/sf_tfs__Named_Credentials_for_Usersearch__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__Named_Credentials_for_Usersearch__c</fullName>
        <label>Named Credentials for Usersearch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>