app/main/default/objects/sf_tfs__TFS_Admin_Settings__c/fields/sf_tfs__TFSBrowseUrl__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__TFSBrowseUrl__c</fullName>
        <label>TFSBrowseUrl</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>